2011-01-31  Paul Thomas  <pault@gcc.gnu.org>

PR fortran/47519
	* trans-stmt.c (gfc_trans_allocate): Improve handling of
	deferred character lengths with SOURCE.
	* iresolve.c (gfc_resolve_repeat): Calculate character
	length from source length and ncopies.
	* dump-parse-tree.c (show_code_node): Show MOLD and SOURCE
	expressions for ALLOCATE.


2011-01-31  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/47519
	* gfortran.dg/allocate_deferred_char_scalar_2.f03: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@169444 138bc75d-0d04-0410-961f-82ee72b054a4